# LuaVar

./: .gitignore  CMakeLists.txt  CMakePresets.json  doxygen.cfg  main.cpp
.github/workflows/: build.yml
benchmarks/: bench.cpp
include/luavar/: binding_utils.h  config.h  luavar.h  passing_values.h  state.h  type_traits.h
source/luavar/: binding_utils.cpp  luavar.cpp  passing_values.cpp  state.cpp
tests/: test.cpp
